# pyumilove

./: README.md  awakenchaosera.py  character.py  client.py  raidshadowlegends.py  requirements.txt  setup.cfg  skill.py
pyumilove/: awakenchaosera.py  client.py  raidshadowlegends.py
src/pyumilove/: awakenchaosera.py  character.py  client.py  raidshadowlegends.py
test/: test_awakenchaosera.py  test_raidshadowlegends.py
