[metadata]
name = pyumilove
version = 0.0.1
author = Bryan Cuneoo
author_email = bryan.cuneo@gmail.com
description = Wrapper around AyumiLove.net.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BryanCuneo/pyumilove
project_urls =
    Bug Tracker = https://github.com/BryanCuneo/pyumilove/issues
classifiers =
    Framework :: aiohttp
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Topic :: Internet
    Topic :: Internet :: WWW/HTTP
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir =
    = pyumilove
packages = find:
python_requires = >=3.7
install_requires =
    aiohttp[speedups] >=3.8
    bs4
    lxml

[options.packages.find]
where = pyumilove